# IM-System

./: README.md
Qt_client/: README.md  chatclient.pro  chatclient_zh_CN.ts  chatroom.cpp  chatroom.h  chatroom.ui  fileuploader.cpp  fileuploader.h  icons.qrc  widget.cpp  widget.h  widget.ui
chat_server/: .gitignore  CMakeLists.txt  README.md
chat_server/common/: file_bus.hpp  logger.hpp  noncopyable.hpp  utils.hpp
chat_server/core/: server.cpp  server.hpp
chat_server/file/: file_catalog.cpp  file_catalog.hpp
chat_server/http/: http_server.cpp  http_server.hpp
chat_server/src/: main.cpp
chat_server/src/common/: logger.cpp
chat_server/uploads/: upload_large.sh
